- Implemented #15190: Add support for text-decoration in drivers.
- Implemented #15195: Implement renderer for external link elements.
- Implemented #15196: Implement renderer for internal link elements and link
  targets.
- Implemented #15191: Implement renderer for literalblock elements.
- Implemented #15194: Implement renderer for definition list elements.
- Implemented: Support for borders and background colors.



1.2.1 - Monday 27 July 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed various smaller bugs in XHtml parsing.


1.2 - Monday 29 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Handling of internal links in wiki writer.
- Fixed: Registering of custom node class does sometimes not work on existing
  documents.
- Fixed: Overlapping text on widdow backtracking
- Fixed: Do not introduce spaces before punctuation on inline markup.


1.2rc1 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.2beta1 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Invalid font creation in haru driver.
- Fixed: Implementation of PDF wrapper class, to call correct renderer.
- Fixed: Implementation of style loading in PDF wrapper class.
- Implemented: Method to register additional PDF parts in wrapper class.
- Implemented: Global error reporting interface, now also used by the PDF
  renderer.
- Implemented: Maintain document location in all conversions, so that embedded
  files can be located.
- Fixed: Text blocks are continued on the same page wrapped images are
  rendered on.
- Fixed: Handle unescaped references containing special chars in RST parser.
- Fixed: Also recurse into section titles in RST visitor AST preprocessing to
  find all reference targets.
- Fixed: Ensure valid XML IDs in visitor.


1.2alpha1 - Tuesday 26 May 2009